--- a/static/scss/_global.scss
+++ b/static/scss/_global.scss
@@ -65,6 +65,9 @@ a.underline {
 a.underline:hover {
   text-decoration: none;
 }
+a.no-underline {
+  text-decoration: none;
+}
 .link-small {
   margin-bottom: 30px;
 }
