--- a/static/scss/_reset.scss
+++ b/static/scss/_reset.scss
@@ -15,6 +15,7 @@ button,
 input,
 select,
 textarea {
+  outline: 0;
   color: $color-black;
   font-family: 'helveticaneuecyrroman', Arial, sans-serif;
 }
