--- a/templates/brand.html
+++ b/templates/brand.html
@@ -61,7 +61,7 @@
 							<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 						</ul>
 						<div class="brand-btn-cont">
-							<a href="" class="btn btn-block" data-originaltxt="Показать еще (15)">Показать еще (15)</a>
+							<a href="" class="btn btn_block" data-originaltxt="Показать еще (15)">Показать еще (15)</a>
 						</div>
 					</div>
 				</div>	
