--- a/templates/brands.html
+++ b/templates/brands.html
@@ -10,44 +10,44 @@
 		<div class="sh-panel plr20">
 			<div class="alphabet">
 				<ul>
-					<li class="alphabet_letter">0-9</li><!--
-					--><li class="alphabet_letter">a</li><!--
-					--><li class="alphabet_letter">b</li><!--
-					--><li class="alphabet_letter">c</li><!--
-					--><li class="alphabet_letter">d</li><!--
-					--><li class="alphabet_letter">e</li><!--
-					--><li class="alphabet_letter">f</li><!--
-					--><li class="alphabet_letter">g</li><!--
-					--><li class="alphabet_letter">h</li><!--
-					--><li class="alphabet_letter">o</li><!--
-					--><li class="alphabet_letter">p</li><!--
-					--><li class="alphabet_letter">r</li><!--
-					--><li class="alphabet_letter">s</li><!--
-					--><li class="alphabet_letter">t</li><!--
-					--><li class="alphabet_letter">u</li><!--
-					--><li class="alphabet_letter">v</li><!--
-					--><li class="alphabet_letter">w</li><!--
-					--><li class="alphabet_letter">x</li><!--
-					--><li class="alphabet_letter">z</li><!--
-					--><li class="alphabet_letter">а</li><!--
-					--><li class="alphabet_letter">в</li><!--
-					--><li class="alphabet_letter">г</li><!--
-					--><li class="alphabet_letter">д</li><!--
-					--><li class="alphabet_letter">и</li><!--
-					--><li class="alphabet_letter">к</li><!--
-					--><li class="alphabet_letter">л</li><!--
-					--><li class="alphabet_letter">м</li><!--
-					--><li class="alphabet_letter">н</li><!--
-					--><li class="alphabet_letter">о</li><!--
-					--><li class="alphabet_letter">р</li><!--
-					--><li class="alphabet_letter">с</li><!--
-					--><li class="alphabet_letter">т</li>
+					<li class=" alphabet_letter s-scroll" data-scroll="0-9">0-9</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="a">a</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="b">b</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="c">c</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="d">d</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="e">e</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="f">f</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="g">g</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="h">h</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="o">o</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="p">p</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="r">r</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="s">s</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="t">t</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="u">u</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="v">v</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="w">w</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="x">x</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="z">z</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="а">а</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="в">в</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="г">г</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="д">д</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="и">и</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="к">к</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="л">л</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="м">м</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="н">н</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="о">о</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="р">р</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="с">с</li><!--
+					--><li class=" alphabet_letter s-scroll" data-scroll="е">т</li>
 				</ul>
 			</div>
 		</div>
 		<div class="plr20">
 			<div class="brands">
-				<div class="brand-section">
+				<div class="brand-section" data-scrollTo="0-9">
 					<div class="brand-column brand-section-name">0-9</div><!--
 					--><div class="brand-column">
 						<ul class="brand-list">
@@ -78,7 +78,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section">
+				<div class="brand-section" data-scrollTo="a">
 					<div class="brand-column brand-section-name">a</div><!--
 					--><div class="brand-column">
 						<ul class="brand-list">
@@ -109,7 +109,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section">
+				<div class="brand-section" data-scrollTo="b">
 					<div class="brand-column brand-section-name">b</div><!--
 					--><div class="brand-column">
 						<ul class="brand-list">
@@ -140,7 +140,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section">
+				<div class="brand-section" data-scrollTo="c">
 					<div class="brand-column brand-section-name">c</div><!--
 					--><div class="brand-column">
 						<ul class="brand-list">
@@ -171,7 +171,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section">
+				<div class="brand-section" data-scrollTo="d">
 					<div class="brand-column brand-section-name">d</div><!--
 					--><div class="brand-column">
 						<ul class="brand-list">
@@ -202,7 +202,7 @@
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section">
+				<div class="brand-section" data-scrollTo="e">
 					<div class="brand-column brand-section-name">e</div><!--
 					--><div class="brand-column">
 						<ul class="brand-list">
