--- a/templates/catalog.html
+++ b/templates/catalog.html
@@ -10,7 +10,7 @@
 	<div class="float-cont">
 		<div class="sidebar fleft">
 			<div class="breed-cont popup-cont tip-wrap">
-				<a href="#" class="popup-btn btn-big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
+				<a href="#" class="popup-btn btn_big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
 				<div class="tip tip_atop">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
 				<div class="popup-layer">
 					<div class="popup-inner">
@@ -20,7 +20,7 @@
 								<div class="tag">Мальтезе <span class="tag-remove"></span></div>
 							</div>
 							<div class="autocomplete-cont">
-								<input type="text" class="tag-input" value="Ма"/>
+								<input type="text" class="tag-input autocomplete-input" value="Ма"/>
 								<a href="" class="btn autocomplete-submit">Выбрать</a>
 								<div class="autocomplete">
 									<div class="autocomplete-line">Мальтезе</div>
@@ -87,7 +87,7 @@
 						<li><a href="brand.html" class="inner-border">Royal Canin</a></li>
 					</ul>
 					<div class="brand-btn-cont">
-						<a href="" class="btn btn-block" data-originaltxt="Все бренды (92)">Все бренды (92)</a>
+						<a href="" class="btn btn_block" data-originaltxt="Все бренды (92)">Все бренды (92)</a>
 					</div>
 				</div>
 			</div>
