--- a/templates/catalog_breed.html
+++ b/templates/catalog_breed.html
@@ -10,7 +10,7 @@
 		<div class="float-cont">
 			<div class="sidebar fleft">
 				<div class="breed-cont popup-cont tip-wrap">
-					<a href="#" class="popup-btn btn-big btn breed-btn tip-init active" data-yoffset="50">Малая аппенинская гончая</a>
+					<a href="#" class="popup-btn btn_big btn breed-btn tip-init active" data-yoffset="50">Малая аппенинская гончая</a>
 					<div class="tip tip_atop">Мы отобрали товары специально для этой породы!</div>
 					<div class="popup-layer">
 						<div class="popup-inner">
@@ -20,7 +20,7 @@
 									<div class="tag">Малая аппенинская гончая <span class="tag-remove"></span></div>
 								</div>
 								<div class="autocomplete-cont">
-									<input type="text" class="tag-input" value="Ма"/>
+									<input type="text" class="tag-input autocomplete-input" value="Ма"/>
 									<a href="" class="btn autocomplete-submit">Выбрать</a>
 									<div class="autocomplete">
 										<div class="autocomplete-line">Мальтезе</div>
