--- a/templates/includes/_footer.html
+++ b/templates/includes/_footer.html
@@ -127,7 +127,7 @@
 			<input type="tel" class="def-input" placeholder="Например, +7(912) 111-11-11" id="f1"/>
 			<div class="label"><label for="f2">Имя*:</label></div>
 			<input type="text" class="def-input" placeholder="" id="f2"/>
-			<div class="sub-cont"><input type="submit" class="btn btn-block" value="Заказать звонок"/></div>
+			<div class="sub-cont"><input type="submit" class="btn btn_block" value="Заказать звонок"/></div>
 		</form>
 	</div>
 </div>
@@ -139,7 +139,7 @@
 			<div class="layer-note3">Укажите номер заказа (6 цифр)</div>
 			<input type="text" class="def-input" placeholder="123456"/>
 			<div class="mb36">
-				<input type="submit" class="btn btn-block" value="Отправить"/>
+				<input type="submit" class="btn btn_block" value="Отправить"/>
 			</div>
 
 			<div class="layer-note">
@@ -148,7 +148,7 @@
 			которые вы использовали при оформлении заказа. Ответ придет на телефон или e-mail.
 			</div>
 			<input type="text" class="def-input" placeholder="Телефон или e-mail"/>
-			<div class="mb36"><input type="submit" class="btn btn-block" value="Отправить"/></div>
+			<div class="mb36"><input type="submit" class="btn btn_block" value="Отправить"/></div>
 
 			<div class="layer-note2">
 				Или позвоните по телефону: 
@@ -162,12 +162,12 @@
 		в Личном кабинете в разделе                 
 		Мои заказы
 		</div>
-		<div><a href="" class="btn btn-block">Войти в аккаунт</a></div>
+		<div><a href="" class="btn btn_block">Войти в аккаунт</a></div>
 	</div>
 </div>
 
 <!-- jquery -->
-<script src="static/js/libs/jquery-1.10.1.min.js"></script>
+<script src="static/js/jquery-1.10.1.min.js"></script>
 <script src="static/js/select2.min.js"></script>
 <script src="static/js/plugins.js"></script>
 <script src="static/js/jquery-ui-1.10.4.custom.min.js"></script>
