--- a/templates/index.html
+++ b/templates/index.html
@@ -375,7 +375,7 @@
 					<p>Качественные товары, бесплатный возврат, вежливое обращение!
 					Подробнее о нашей компании вы можете прочитать на странице.</p>
 				</div>
-				<a href="" class="btn btn-wide">О нас</a>
+				<a href="" class="btn btn_wide">О нас</a>
 			</div>
 		</div>
 		<div class="help-cont">
