--- a/templates/shopping_chart.html
+++ b/templates/shopping_chart.html
@@ -105,7 +105,12 @@
                         </tr>
                     </table>
                     <div class="chart_row ptb20">
-                        <span class="chart_desc">Если у вас есть промо-код или купон, укажите его здесь:</span><!--
+                        <span class="chart_desc">Если у вас есть промо-код или купон
+                            <span class="tip-wrap tip-init">
+                                (?)
+                                <div class="tip tip_atop">Небольшое описание промо-кода и <a href="#" class="blue">ссылка</a> на страницу с подробным описанием понятия «Промо-код»</div>
+                            </span>
+                            , укажите его здесь:</span><!--
                         --><span class="chart_input"><input type="text" class="text-box" /></span><!--
                         --><span class="chart_button"><a href="#" class="btn btn_grey">Пересчитать</a></span>
                     </div>
@@ -123,7 +128,7 @@
                     <div class="chart_row chart_final">Стоимость с учетом всех скидок: 560 Р</div>
                     <div class="chart_panel">
                         <span class="chart_checkout">
-                            <a href="#" class="btn btn-block">Оформить заказ</a>
+                            <a href="#" class="btn btn_block">Оформить заказ</a>
                             <a href="#" class="btn_default btn_cut-top btn_behind">Купить в один клик</a>
                         </span>
                         <span class="chart_lefel-up">
