--- a/static/scss/_autocomplete.scss
+++ b/static/scss/_autocomplete.scss
@@ -8,7 +8,7 @@
   border-radius: 5px;
   box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
   left: 0;
-  top: 41px;
+  top: 100%;
   display: none;
 }
 .autocomplete-line {
