--- a/static/scss/_filters.scss
+++ b/static/scss/_filters.scss
@@ -64,7 +64,7 @@
   text-align: center;
   padding: 0;
 }
-.breed-cont .btn-big.active {
+.breed-cont .btn_big.active {
   font-size: 14px;
   font-family: 'helveticaneuecyrroman';
 }
