--- a/static/scss/_tabs.scss
+++ b/static/scss/_tabs.scss
@@ -28,6 +28,7 @@ ul.tabs {
       box-shadow: 0 5px 7px 1px rgba(0,0,0,0.25);
       border-radius: 5px 5px 0 0;
       position: relative;
+      cursor: default;
 
       .sh-fix {
         position: absolute;
