--- a/templates/filter.html
+++ b/templates/filter.html
@@ -20,7 +20,7 @@
 	<div class="float-cont">
 		<div class="sidebar fleft">
 			<div class="breed-cont popup-cont tip-wrap">
-				<a href="#" class="popup-btn btn-big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
+				<a href="#" class="popup-btn btn_big btn breed-btn tip-init" data-yoffset="50">Выбрать породу</a>
 				<div class="tip tip_atop">У нас есть специальные товары для некоторых пород. Выберите породу и посмотрите!</div>
 				<div class="popup-layer">
 					<div class="popup-inner">
@@ -30,7 +30,7 @@
 								<!-- see catalog_breed.html page for variant of this block -->
 							</div>
 							<div class="autocomplete-cont">
-								<input type="text" class="tag-input" value="Ма"/>
+								<input type="text" class="tag-input autocomplete-input" value="Ма"/>
 								<a href="" class="btn autocomplete-submit">Выбрать</a>
 								<div class="autocomplete">
 									<div class="autocomplete-line">Мальтезе</div>
