--- a/templates/search_result.html
+++ b/templates/search_result.html
@@ -74,7 +74,7 @@
 									</li>
 								</ul>
 								<div class="brand-btn-cont">
-									<a href="" class="btn btn-block" data-originaltxt="Показать еще (4)">Показать еще (4)</a>
+									<a href="" class="btn btn_block" data-originaltxt="Показать еще (4)">Показать еще (4)</a>
 								</div>
 							</div>
 						</div>
