--- a/templates/brands.html
+++ b/templates/brands.html
@@ -47,189 +47,189 @@
 		</div>
 		<div class="plr20">
 			<div class="brands">
-				<div class="brand-section" data-scrollTo="0-9">
-					<div class="brand-column brand-section-name">0-9</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+				<div class="brands_section" data-scrollTo="0-9">
+					<div class="brands_column brands_section-name">0-9</div><!--
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section" data-scrollTo="a">
-					<div class="brand-column brand-section-name">a</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+				<div class="brands_section" data-scrollTo="a">
+					<div class="brands_column brands_section-name">a</div><!--
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section" data-scrollTo="b">
-					<div class="brand-column brand-section-name">b</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+				<div class="brands_section" data-scrollTo="b">
+					<div class="brands_column brands_section-name">b</div><!--
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section" data-scrollTo="c">
-					<div class="brand-column brand-section-name">c</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+				<div class="brands_section" data-scrollTo="c">
+					<div class="brands_column brands_section-name">c</div><!--
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section" data-scrollTo="d">
-					<div class="brand-column brand-section-name">d</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+				<div class="brands_section" data-scrollTo="d">
+					<div class="brands_column brands_section-name">d</div><!--
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="brand-section" data-scrollTo="e">
-					<div class="brand-column brand-section-name">e</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+				<div class="brands_section" data-scrollTo="e">
+					<div class="brands_column brands_section-name">e</div><!--
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div><!--
-					--><div class="brand-column">
-						<ul class="brand-list">
-							<li><a href="#" class="brand-link">Аbandon Ship</a></li>
-							<li><a href="#" class="brand-link">Adidas Originals</a></li>
-							<li><a href="#" class="brand-link">Afends</a></li>
+					--><div class="brands_column">
+						<ul class="brands_list">
+							<li><a href="#" class="brands_link">Аbandon Ship</a></li>
+							<li><a href="#" class="brands_link">Adidas Originals</a></li>
+							<li><a href="#" class="brands_link">Afends</a></li>
 						</ul>
 					</div>
 				</div>
